update on numerical calculation

--- a/High Performance Python/main.tex
+++ b/High Performance Python/main.tex
@@ -97,7 +97,9 @@
 			\item For large series of strings with low cardinality, convert it to category type
 		\end{itemize}
 
-
+\section{multiprocessing}
+	The multiprocessing module provides process and thread based parallel processing, share work over queues and share data among process
+	
 
 
 \end{document}
